--- a/recette.css
+++ b/recette.css
@@ -25,11 +25,11 @@ div.contenu{
     auto: prend tout l'espace restant dans le cote defini
     */
     min-width: 350px;
-    margin: 60px 10% 80px 10%;
+    margin: 40px 8px 40px 8px;
 
     /* padding: marge interne */
 
-    padding: 0px 30px 30px 30px;
+    padding: 0px 8px 20px 8px;
     /* effet d'ombre: decalage_x decalage_y quantite_flou imposer_ombres_partout couleur*/
     box-shadow: 0px 0px 8px 8px rgba(0, 0, 0, 0.2);
     overflow: visible;
@@ -84,17 +84,17 @@ table.infos{
     color: white;
     background-color: #6C829D;
     opacity: 80%;
-    height: 80px;
+    height: 50px;
 }
 
 table.infos th{
-    font-size: 16px;
+    font-size: 14px;
     vertical-align: bottom;
     padding-bottom: 8px;
 }
 
 table.infos td{
-    font-size: 14px;
+    font-size: 12px;
     text-align: center;
     vertical-align: top;
 }
@@ -117,17 +117,12 @@ div.colonne h2{
 }
 
 div.colonne{
-    width: 45%;
+    width: 100%;
     margin-top: 20px;
 }
 
 div.colonne1{
     display: inline-block;
-    margin-right: 10%;
-}
-
-div.colonne2{
-    float: right;
 }
 
 div.ingredients p{
@@ -168,11 +163,54 @@ table.preparation tr{
     height: 40px;
 }
 
+/* Styles pour ordinateur */
+@media only screen and (min-width: 768px) {
+    div.contenu{
+        min-width: 350px;
+        margin: 60px 10% 80px 10%;
+        padding: 0px 30px 30px 30px;
+    }
 
+    table.infos{
+        height: 80px;
+    }
+    table.infos th{
+        font-size: 16px;
+    }
+    
+    table.infos td{
+        font-size: 14px;
+    }
 
+    div.colonne h2{
+        text-align: center;
+        text-transform: uppercase;
+        font-size: 15px;
+        border-bottom: 5px solid#6C829D;
+        padding-bottom: 5px;
+    }
+    
+    div.colonne{
+        width: 45%;
+        margin-top: 20px;
+    }
+    
+    div.colonne1{
+        margin-right: 10%;
+    }
+    
+    div.colonne2{
+        float: right;
+    }
+}
 
-
-
+@media only screen and (min-width: 900px) {
+    div.contenu{
+        margin-left:auto;
+        margin-right: auto;
+        width: 645px;
+}
+}
 
 
 
